--- a/Meeting Agenda App/Src/App.fx.yaml
+++ b/Meeting Agenda App/Src/App.fx.yaml
@@ -1,7 +1,8 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |
-        =Set(DaysCount,LookUp('Config List',Key="Days Count").'No. of days');
+        =Set(varLoadingSpinner,false);
+        Set(DaysCount,LookUp('Config List',Key="Days Count").'No. of days');
         
         Set(
             varAgendaTab,
