--- a/Meeting Agenda App/Src/ResourceScreen.fx.yaml
+++ b/Meeting Agenda App/Src/ResourceScreen.fx.yaml
@@ -40,7 +40,7 @@ ResourceScreen As screen:
         MaxAttachments: =1
         MaxAttachmentSize: =25
         OnAddFile: |-
-            =Set(
+            =Set(varLoadingSpinner,true);Set(
                 varDemoFromAttachmentcontrol,
                 JSON(
                     Image7.Image,
@@ -85,7 +85,8 @@ ResourceScreen As screen:
                 )
             );
             Refresh(MeetingList);
-            Reset(Attachmentcontrol)
+            Reset(Attachmentcontrol);
+            Set(varLoadingSpinner,false);
         PaddingBottom: =5
         PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
         PaddingRight: =5
